--- a/MUD/MUD/MUD.csproj
+++ b/MUD/MUD/MUD.csproj
@@ -46,7 +46,7 @@
     <Compile Include="C.cs" />
     <Compile Include="Chest.cs" />
     <Compile Include="Data.cs" />
-    <Compile Include="DifferentsWeapons.cs" />
+    <Compile Include="DiffWeapons.cs" />
     <Compile Include="Edge.cs" />
     <Compile Include="Interface.cs" />
     <Compile Include="Map.cs" />
