--- a/MUD/MUD/MUD.csproj
+++ b/MUD/MUD/MUD.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Map.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="PlayerCostomization.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
