Fjernet Bin mappen (forhåbenligt)
Bin indenholder alle musikfiler, så jeg har fjernet den fra listen over filer der skal ignoreres

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@
 [Xx]86/
 [Bb]uild/
 bld/
-[Bb]in/
+# Bin contains music files, and is therefore needed
+#[Bb]in/
 [Oo]bj/
 
 # Visual Studio 2015 cache/options directory
