--- a/MUD/MUD/MUD.csproj
+++ b/MUD/MUD/MUD.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Force.cs" />
     <Compile Include="Interface.cs" />
     <Compile Include="Map.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="Narrator.cs" />
     <Compile Include="Option.cs" />
